<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:id="@+id/hike_option_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:clickable="false"
            android:focusable="false"
            android:textSize="22sp"
            android:textColor="@color/quantum_bluegrey950"
            android:contentDescription="@string/trail_desc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hike_option_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:textSize="18sp"
                android:contentDescription="@string/trail_len_desc"/>
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="#dadada" />
            <TextView
                android:id="@+id/hike_option_difficulty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:textSize="18sp"
                android:contentDescription="@string/trail_diff_desc"/>
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/hike_option_difficulty"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_weight="2"-->
<!--            android:clickable="false"-->
<!--            android:focusable="false"/>-->

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#dadada" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#dadada" />
</LinearLayout>